<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Audiour Beta</string>
    <string name="app_version">0.4.4</string>
    <string name="app_store_url">https://play.google.com/store/apps/details?id=com.nathanrjones.audiour</string>
    <string name="default_app_name">F6ADC45B</string>

    <!-- API -->
    <string name="production_api_url">http://api.audiour.com</string>
    <string name="staging_api_url">http://apistaging.audiour.com</string>

    <!-- Titles -->
    <string name="title_featured">Featured</string>
    <string name="title_trending">Trending</string>
    <string name="title_random">Browse Random</string>
    <string name="title_recents">Recent Uploads</string>
    <string name="title_starred">Starred</string>
    <string name="title_settings">Settings</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Actions -->
    <string name="action_cast">Cast</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <!-- Preferences -->
    <string name="pref_username">Username</string>
    <string name="pref_username_summary">Your Audiour Username</string>
    <string name="pref_default_url">Default Audiour URL</string>
    <string name="pref_default_url_summary">This will populate when you load the app.</string>
    <string name="pref_app_name">Cast Application ID</string>
    <string name="pref_app_name_summary">The Chromecast App Name or ID given by Google.</string>
    <string name="pref_receiver_setup">Receiver Setup</string>
    <string name="pref_receiver_setup_summary">Instructions to setup your Chromecast Receiver.</string>
    <string name="pref_receiver_setup_url">https://github.com/nathanjones/audiour-android/blob/master/README.md#setup-instructions</string>
    <string name="pref_share_app">Share with Friends!</string>
    <string name="pref_share_app_summary">Let others know about this app.</string>
    <string name="pref_rate_app">Rate Application</string>
    <string name="pref_rate_app_summary">Rate this ★★★★★ on Google Play</string>
    <string name="pref_send_feedback">Send Feedback</string>
    <string name="pref_send_feedback_summary">Send your requests or issues</string>
    <string name="pref_send_feedback_url">mailto:audiour@nathanrjones.com</string>
    <string name="pref_donate_bitcoins">Donate with Bitcoins</string>
    <string name="pref_donate_summary">Support future development by donating.</string>
    <string name="pref_donate_bitcoins_url" formatted="false">bitcoin:176mSAG6oaQfEmz89MU9QN83HuLBdX4PX9?amount=0.005&amp;label=Nathan%20Jones&amp;message=Thanks!</string>

    <!-- Main Activity -->
    <string name="audiour_url_hint">Enter an Audiour URL</string>
    <string name="audiour_url_default">http://audiour.com/frglqrgg.mp3</string>
    <string name="action_search">Search</string>
    <string name="search_title">Open a File</string>
    <string name="search_prompt">To open any file, enter an Audiour File ID in the field below</string>
    <string name="action_share">Share</string>

    <!-- Cast Companion Library -->

    <string name="app_id">F6ADC45B</string>
    <!-- <string name="app_id">A4B415BE</string> -->
    <string name="hello_world">Hello world!</string>
    <string name="cast_app_name">GoogleCastPlayer</string>
    <string name="media_route_menu_title">Play on…</string>
    <string name="list_of_videos">Select a Video Clip</string>
    <string name="casting_to_device">Casting to %1$s</string>
    <string name="ok">OK</string>
    <string name="no_device">(No Device Selected)</string>
    <string name="error">Error</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>
    <string name="loading">Loading…</string>
    <string name="no_video_found">No video was found</string>
    <string name="about_app">About DemoCast Player</string>
    <string name="version">Version: %1$s</string>
    <string name="session_reconnection_attempt">Attempting to recover previous session…</string>

    <!-- Error messages -->
    <string name="failed_to_set_volume">Failed to set the volume</string>
    <string name="failed_to_launch_app">Failed to lauch application</string>
    <string name="failed_to_set_mute">Failed to adjust the volume mute</string>
    <string name="failed_to_find_app">The application you are trying to launch is not availabled on your chromecast device</string>
    <string name="failed_app_launch_timeout">The request to launch the application has timed out!</string>
    <string name="failed_to_play">Failed to start the playback of media</string>
    <string name="failed_to_pause">Failed to pause the playback of media</string>
    <string name="failed_to_connect">Could not connect to the device</string>
    <string name="failed_to_seek">Failed to seek to the specified position on the remote device</string>
    <string name="video_error_media_load_timeout">Media loading timed out</string>
    <string name="video_error_server_unaccessible">Media server was not reachable</string>
    <string name="video_error_unknown_error">Failed to load video</string>
    <string name="connection_temp_lost">Connection to the cast device is temporarily lost</string>
    <string name="connection_recovered">Connection to the cast device is recovered</string>
    <string name="connection_lost_retry">Connection to the cast device has been temporarily lost. Application is trying to reover connection, please try again later</string>
    <string name="connection_lost">No connection to the cast device exist</string>
    <string name="failed_to_perfrom_action">Sorry, ran into issues perfroming the task you wanted</string>
    <string name="oops">Oops</string>

    <!-- Preferences -->
    <string name="prefs_header_application">Application Behavior</string>
    <string name="prefs_header_application_summary">Control how the application behaves on the TV</string>
    <string name="prefs_termination_policy_default">0</string>
    <string name="prefs_termination_policy_dialog_title">When Disconnecting</string>
    <string name="prefs_volume_title">Volume Assignment</string>
    <string name="prefs_volume_title_summary">Controls %1$s</string>
    <string name="prefs_volume_dialog_title">Volume Assignment</string>
    <string name="prefs_volume_default">device</string>
    <string name="title_activity_test">TestActivity</string>

    <!-- Tabs -->
    <string name="tab_videos_title">Videos</string>
    <string name="tab_music_title">Songs</string>
    <string name="tab_photos_title">Photos</string>

    <!-- One-time help screen -->
    <string name="showcase_simple_title">Touch to cast videos, music  or photos to your TV</string>
    <string name="showcase_simple_message"></string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="upgrade_prompt_description">Audiour has been rebuilt from the ground up and is now Clyp. Audiour will no longer be actively supported.\n\nTo check out the new features, including record and upload, more featured content, and better Chromecast support, click the Play Store link below.</string>

</resources>
