<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <PreferenceCategory
        android:title="Chromecast Setup"
        android:key="chromecast_category">

        <EditTextPreference
            android:key="pref_app_name"
            android:title="@string/pref_app_name"
            android:summary="@string/pref_app_name_summary"
            android:defaultValue="@string/default_app_name" />

        <PreferenceScreen
            android:title="@string/pref_receiver_setup"
            android:summary="@string/pref_receiver_setup_summary">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/pref_receiver_setup_url" />

        </PreferenceScreen>

    </PreferenceCategory>

    <PreferenceCategory
        android:summary="@string/prefs_header_application_summary"
        android:title="@string/prefs_header_application" >
        <ListPreference
            android:defaultValue="@string/prefs_termination_policy_default"
            android:dialogTitle="@string/prefs_termination_policy_dialog_title"
            android:entries="@array/prefs_termination_policy_names"
            android:entryValues="@array/prefs_termination_policy_values"
            android:key="termination_policy"
            android:title="@string/prefs_termination_policy_dialog_title" />
        <ListPreference
            android:defaultValue="@string/prefs_volume_default"
            android:dialogTitle="@string/prefs_volume_dialog_title"
            android:entries="@array/prefs_volume_names"
            android:entryValues="@array/prefs_volume_values"
            android:key="volume_target"
            android:summary="@string/prefs_volume_title_summary"
            android:title="@string/prefs_volume_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about_app" >
        <EditTextPreference
            android:enabled="false"
            android:key="app_version"
            android:persistent="false"
            android:selectable="false"
            android:shouldDisableView="false"
            android:title="@string/version" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="About"
        android:key="about_category">

        <Preference
            android:key="pref_share_app"
            android:title="@string/pref_share_app"
            android:summary="@string/pref_share_app_summary"/>

        <PreferenceScreen
            android:title="@string/pref_rate_app"
            android:summary="@string/pref_rate_app_summary">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/app_store_url" />

        </PreferenceScreen>

        <PreferenceScreen
            android:title="@string/pref_donate_bitcoins"
            android:summary="@string/pref_donate_summary">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/pref_donate_bitcoins_url" />

        </PreferenceScreen>

        <PreferenceScreen
            android:title="@string/pref_send_feedback"
            android:summary="@string/pref_send_feedback_summary">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/pref_send_feedback_url" />

        </PreferenceScreen>

        <Preference
            android:title="Version"
            android:summary="@string/app_version"/>

        </PreferenceCategory>

</PreferenceScreen>