<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_cast"
        android:title="@string/action_cast"
        app:actionProviderClass="android.support.v7.app.MediaRouteActionProvider"
        app:showAsAction="always"/>

    <item android:id="@+id/action_share"
        android:showAsAction="ifRoom"
        android:title="@string/action_share"
        android:visible="false"
        android:actionProviderClass="android.widget.ShareActionProvider" />

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="200"
        android:showAsAction="never" />
</menu>
